# Ethereal

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  Samples.md  bootstrap.sh  build.al  build.et  code_samples.md  perform_tests.et  playground.et  tmp.et  todo.md
Design/: info.md  parser_keywords.gv
book/: book.toml
book/src/: 00-intro.md  01-guide.md  01-install.md  02-hello-world.md  03-vars.md  04-data-types.md  05-input.md  06-functions.md  SUMMARY.md
ethereal-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
ethereal-vscode/syntaxes/: ethereal.tmLanguage.json
include/ethereal/: core.et  cxxproj.et  fs.et  ini.et  map.et  math.et  opt.et  os.et  set.et  str.et  term.et  threads.et  time.et  tuple.et  vec.et
modules/eth/: vm.cpp
modules/pre/: core.cpp
modules/std/: complex.cpp  core.cpp  fs.cpp  map.cpp  math.cpp  opt.cpp  os.cpp  regex.cpp  runtime.cpp  set.cpp  str.cpp  term.cpp  threads.cpp  time.cpp  tuple.cpp  vec.cpp
src/: CmdArgs.cpp  CmdArgs.hpp  Config.hpp.in  Core.cpp  Core.hpp  Env.cpp  Env.hpp  Err.cpp  Err.hpp  Ethereal.cpp  Ethereal.hpp  FS.cpp  FS.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Parser.cpp  Parser.hpp  VM.cpp  VM.hpp
src/FE/: CmdArgs.cpp  CmdArgs.hpp  Core.cpp  Core.hpp  Env.cpp  Env.hpp  Err.cpp  Err.hpp  Ethereal.cpp  Ethereal.hpp  FS.cpp  FS.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Parser.cpp  Parser.hpp
src/Parser/: Block.cpp  Common.cpp  Common.hpp  Enum.cpp  Expression.cpp  For.cpp  Function.cpp  Functions.hpp  IO.hpp  Import.cpp  Internal.cpp  Internal.hpp  Ldmod.cpp  ParseHelper.cpp  ParseHelper.hpp  Stmts.cpp  Stmts.hpp  Struct.cpp  if.cpp
src/VM/: Aliases.cpp  Aliases.hpp  CallFunc.cpp  CallFunc.hpp  Consts.cpp  Consts.hpp  Core.cpp  Core.hpp  DynLib.cpp  DynLib.hpp  ExecInternal.cpp  ExecInternal.hpp  ExecStack.cpp  ExecStack.hpp  Functions.cpp  Functions.hpp  Instruction.cpp  Instruction.hpp  Instructions.cpp  Instructions.hpp  LoadFile.cpp  LoadFile.hpp  Main.cpp  MemPool.cpp  MemPool.hpp  Module.hpp  VM.cpp  VM.hpp  VMStack.cpp  VMStack.hpp  Vars.cpp  Vars.hpp
stdlib/: core.cpp  fs.cpp  map.cpp  math.cpp  opt.cpp  os.cpp  set.cpp  str.cpp  term.cpp  time.cpp  tuple.cpp  vec.cpp
stdlib/Core/: Bool.hpp  Flt.hpp  Int.hpp
tests/: ackermann.et  block.et  bst.et  bubble_sort.et  conditionals.et  cont_brk.et  double_bubble_sort.et  dyn_mod.et  enum.et  env.et  expression.et  facto_iterate.et  facto_recurse.et  fast_recurse_fib.et  fileio.et  fizzbuzz.et  float.et  func.et  funcs.et  functions.et  if.et  import.et  import_file.et  inc_lib_dirs.et  include_file.et  ini_parser.et  int_binary.et  json_flat.et  ldmod.et  loop.et  loops.et  mandelbrot.et  map_in_struct.et  map_module.et  mem_func.et  mem_funcs.et  mod_fs.et  mod_map.et  mod_math.et  mod_opt.et  (+25 more)
tests/data/: expected1_json_flat.json  test1_ini_parser.ini  test1_json_flat.json
tests/mod_core/: assert.et  bool.et  cprint.et  cprintln.et  dprint.et  dprintln.et  exit.et  flt.et  flush_err.et  flush_out.et  int.et  nil.et  print.et  println.et  type.et  var_exists.et  var_mfn_exists.et  var_ref_count.et
(+141 files in other folders)
